--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="google-site-verification" content="gSsayIGjvMF9M74Nl-L-cWntIgdlMm_RSsIn9ZJSugo" />
   </head>
   <body>
     <h1>Hello World</h1>
